@@ -1,2 +1,3 @@
 DIST paper_trail-3.0.6.gem 129024 SHA256 a775b82511e747471cf877c3379a6fe5dcb156bbb92eab3e6a77f98ca4357033 SHA512 c16156850651539e1c06d4c524913260feb90359ed3344c1d571a5bbae992d95208e8caffa52509ab4733d8d6059fed83af8f969ff4b21475a3d23b02c8c0fef WHIRLPOOL 224dc7d3d556048f36138bb86580cb70ebb4a2756ddc6eb1527162b298ca655f98835e8bae6f9cf2e0b44d075198a2f487517dc1a83d57046b852167856cae1c
 DIST paper_trail-3.0.7.gem 129536 SHA256 414decd40007dce2f1c4cc0be6a68c9ecb4bfc390d470e94fd9f6da2231cee89 SHA512 0f812ec5b3136b9a3e42db233d0f97c1718a9c99e24237b79c588f6fb57c324efb98316cf8bdce87b0ad2bd3af326c8800034ac3103a3ed3dee055320cd532ed WHIRLPOOL 94b73b890025730077ba7a764f7b133e7d07c042d9d2e672f131f360fbfe36743f88989a99eb5d1c039d484dd08b0c51972862160ef7370c6ebb0f79bf97b303
+DIST paper_trail-3.0.8.gem 130048 SHA256 81234c9ebf217c89e89129770fd0719df8f81e580a1f029daa8afc69c341e60e SHA512 e959d5c8e321f0ac49c34d8b5507c95a9bf8a9eaf2e42cd19c7c04a4f645abe351318756fd07ea73bd1bfe5900f86f628b418c4fe01052ec8d6a79732ace784e WHIRLPOOL 6c004f2f254a78b4b4904f982330a584feb72cbd3a91cfee43d755be7f1b027afd08f795dc2549a4a3617fa87bf06dfa813e6d75f13db67f4bb6aece06fbbe1d
