@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*paper_trail-3.0.8 (05 May 2015)
+
+  05 May 2015; Hans de Graaff <graaff@gentoo.org> +paper_trail-3.0.8.ebuild:
+  Version bump.
+
   01 Apr 2015; Hans de Graaff <graaff@gentoo.org> -paper_trail-2.6.3.ebuild,
   -paper_trail-3.0.2.ebuild, -paper_trail-3.0.3.ebuild:
   Cleanup.
